; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_incomplete_class.c_incomplete_class_message.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_incomplete_class.c_incomplete_class_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INCOMPLETE_CLASS_MSG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @incomplete_class_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @incomplete_class_message(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call i32* @php_lookup_class_name(i32* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @INCOMPLETE_CLASS_MSG, align 4
  %13 = load i32*, i32** %5, align 8
  %14 = call i8* @ZSTR_VAL(i32* %13)
  %15 = call i32 @php_error_docref(i32* null, i32 %11, i32 %12, i8* %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @zend_string_release_ex(i32* %16, i32 0)
  br label %22

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @INCOMPLETE_CLASS_MSG, align 4
  %21 = call i32 @php_error_docref(i32* null, i32 %19, i32 %20, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  br label %22

22:                                               ; preds = %18, %10
  ret void
}

declare dso_local i32* @php_lookup_class_name(i32*) #1

declare dso_local i32 @php_error_docref(i32*, i32, i32, i8*) #1

declare dso_local i8* @ZSTR_VAL(i32*) #1

declare dso_local i32 @zend_string_release_ex(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
